Fixed flex issue with main being too big

--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-  flex: 0 80px;
+  flex: 0 0 100px;
   background-color: #FBEEC1;
   float: left;
 }
@@ -44,7 +44,7 @@ menu .nav-item {
 }
 
 main {
-  flex: 1 calc(100vh - 110px);
+  flex: 0 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -53,7 +53,7 @@ main {
 }
 
 footer {
-  flex: 0 30px;
+  flex: 0 0 90px;
   display: flex;  
   justify-content: center;
   align-items: center;
@@ -90,12 +90,12 @@ footer a {
 
 @media (max-height: 600px) {
   header {
-    flex: 0 50px;
+    flex: 0 100px;
   }
   footer {
-    flex: 0 50px;
+    flex: 0 90px;
   }
   main {
-    flex: 1 100vh;
+    flex: 1 65vh;
   }
 }
